swaped imgs in service section and user avatars in feedbacks

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="ladno__left">
                         <div class="ladno__title_1">Вы контролируете автоматизацию, бот контролирует ваши продажи</div>
                         <div class="ladno__cover">
-                            <img src="./images/service/ladno-cover.jpg" alt="">
+                            <img src="./images/service/ill.jpg" alt="">
                         </div>
                     </div>
                     <div class="ladno__right">
@@ -346,7 +346,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/feedback1.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Надежда, маркетолог</h3>
                         </div>
@@ -363,7 +363,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/feedback2.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Людмила, веб-дизайнер</h3>
                         </div>
@@ -380,7 +380,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/feedback3.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Нурия, дизайнер</h3>
                         </div>
@@ -396,7 +396,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/feedback4.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Артем, специалист по рекламе</h3>
                         </div>
@@ -412,7 +412,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/feedback5.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Денис, разработчик</h3>
                         </div>
