adaptive bugs in intro section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         Kwork и других биржах. Попробуйте 3 дня бесплатно!</p>
                     <a href="#" target="_blank" class="button__container">
                         <button class="button">
-                            <span>Начать автоматизировать отклики</span>
+                            <span>Начать</span>
                         </button>
                     </a>
                     <p class="label">Забудьте о ручном поиске. Бот круглосуточно мониторит заказы и мгновенно
