update info from oferta

--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
             <div class="container">
                 <div class="info">
                     <h2 class="title"><span>Фриланс без рутины.</span> Откликайся на Kwork в 10 раз быстрее!</h2>
-                    <p class="text">Наш бот не просто ищет заказы, он автоматически отправляет отклики за вас на
-                        Kwork и других биржах. Попробуйте 3 дня бесплатно!</p>
+                    <p class="text">Наш бот предоставляет услуги по умному поиску заказов и автоматически отправляет отклики за вас на Kwork и других биржах. Попробуйте 3 дня бесплатно!</p>
                     <a href="#" target="_blank" class="button__container">
                         <button class="button">
-                            <span>Начать</span>
+                            <span>Начать автоматизировать отклики</span>
                         </button>
                     </a>
-                    <p class="label">Забудьте о ручном поиске. Бот круглосуточно мониторит заказы и мгновенно
-                        отправляет ваше предложение. Более 50 категорий и до 100 актуальных заказов ежедневно!</p>
+                    <p class="label">Услуги — предоставление Пользователю доступа к функционалу чат-бота, включая автоматическое получение заказов, фильтрацию, отправку уведомлений и иные функции, указанные на сайте/в интерфейсе бота.</p>
                 </div>
                 <!-- <div class="image">
                     <img src="./images/intro/intro-decor.jpg" alt="">
@@ -120,17 +118,12 @@
                     <div class="ladno__left">
                         <div class="ladno__title_1">Вы контролируете автоматизацию, бот контролирует ваши продажи</div>
                         <div class="ladno__cover">
-                            <img src="./images/service/ill.jpg" alt="">
+                            <img src="./images/service/ladno-cover.jpg" alt="">
                         </div>
                     </div>
                     <div class="ladno__right">
-                        <h2 class="ladno__title_2">Готовы к тысячам процентов ROMI?</h2>
-                        <p class="ladno__desc">Более 500 фрилансеров уже увеличили свой доход с помощью нашего автобота
-                            для Kwork. Рассмотрим минимальные цифры: При годовом тарифе стоимость в день — всего 42,46
-                            рубля. Бот отправляет 50 откликов ежедневно, что дает 18 250 откликов в год. При
-                            консервативной конверсии 0,5% это 91 клиент. При среднем чеке 20 000 рублей ваш годовой
-                            доход составит 1 820 000 рублей! Это более 11 000% ROMI. Ни один другой инструмент
-                            для фриланса не даст вам такую окупаемость.</p>
+                        <h2 class="ladno__title_2">Что такое Telegram-чат-бот?</h2>
+                        <p class="ladno__desc">Telegram-чат-бот — программный продукт Исполнителя, размещённый в мессенджере Telegram, предназначенный для автоматического получения, обработки и выдачи заказов с платформы Kwork пользователям.</p>
                         <a href="#" target="_blank" class="button__container">
                             <button class="button">
                                 <span>Рассчитать мою окупаемость</span>
@@ -149,8 +142,8 @@
             <div class="marketing__article">
                 <div class="container">
                     <div class="">
-                        <p class="marketing__text">Наша основная задача — автоматизировать</p>
-                        <h2 class="marketing__title">первый контакт с заказчиком на Kwork</h2>
+                        <h2 class="marketing__title">Платформа Kwork —</h2>
+                        <p class="marketing__text">внешний онлайн-маркетплейс фриланс-услуг, не связанный с Исполнителем. Исполнитель не является партнёром, подрядчиком или представителем Kwork.</p>
                     </div>
 
                     <div class="marketing__list">
@@ -195,7 +188,7 @@
                 <div class="container">
                     <div class="marketing__info">
                         <!-- <p class="marketing__cards__text">МЫ БОЛЬШЕ, ЧЕМ ЛЮБАЯ БИРЖА. МЫ СИСТЕМА ПРОДАЖ!</p> -->
-                        <p class="marketing__cards__text">Мы больше, чем лююая биржа. Мы система продаж!</p>
+                        <p class="marketing__cards__text">Мы больше, чем любая биржа. Мы система продаж!</p>
                         <h3 class="marketing__cards__title">Ваш бот-менеджер для Kwork работает по 50+ направлениям</h3>
                         <p class="marketing__cards__desc">Мы не просто ищем заказы, мы гарантируем мгновенный отклик
                             по ключевым словам и фильтрам. Ваш бот-менеджер всегда будет первым. Мы даем не просто
@@ -346,7 +339,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/feedback1.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Надежда, маркетолог</h3>
                         </div>
@@ -363,7 +356,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/feedback2.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Людмила, веб-дизайнер</h3>
                         </div>
@@ -380,7 +373,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/feedback3.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Нурия, дизайнер</h3>
                         </div>
@@ -396,7 +389,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/feedback4.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Артем, специалист по рекламе</h3>
                         </div>
@@ -412,7 +405,7 @@
                     <div class="feedbacks__cards__item">
                         <div class="feedback__header">
                             <div class="feedback__avatar">
-                                <img src="./images/feedbacks/default.jpg" alt="Фото пользователя">
+                                <img src="./images/feedbacks/feedback5.jpg" alt="Фото пользователя">
                             </div>
                             <h3 class="feedback__author">Денис, разработчик</h3>
                         </div>
@@ -645,7 +638,7 @@
         <section class="section questions__section">
             <div class="container">
                 <h2 class="questions__title">Частые вопросы об автоматизации Kwork</h2>
-                <h4 class="questions__text">ЗНАЕМ ОТВЕТЫ НА ВСЕ ВАШИ ВОПРОСЫ</h4>
+                <h4 class="questions__text">Ответим на любой ваш вопрос!</h4>
                 <div class="questions__list">
 
                     <div class="questions__item">
@@ -795,6 +788,52 @@
                         <div class="question__info">
                             Да, для новых пользователей действует промокод "AUTOFIRST", который дает 15% скидки
                             на первую подписку.
+                        </div>
+                    </div>
+
+                    <div class="questions__item">
+                        <div class="question__header">
+                            <span class="question__name">Кто такой пользователь?</span>
+                            <div class="question__plus">
+                                <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+                                </svg>
+                            </div>
+                            <div class="question__minus">
+                                <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M18 12H6"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="question__info">
+                            Пользователь — физическое лицо или ИП, пользующееся услугами Исполнителя.
+                        </div>
+                    </div>
+
+                    <div class="questions__item">
+                        <div class="question__header">
+                            <span class="question__name">Что такое абонентская плата?</span>
+                            <div class="question__plus">
+                                <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+                                </svg>
+                            </div>
+                            <div class="question__minus">
+                                <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M18 12H6"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="question__info">
+                            Абонентская плата — стоимость доступа к функционалу чат-бота на установленный период.
                         </div>
                     </div>
 
