--- a/index.html
+++ b/index.html
@@ -853,9 +853,14 @@
                 <div class="logo">
                     Logo
                 </div>
-                <a href="#" target="_blank" class="button__container">
+                <a href="./ПУБЛИЧНАЯ ОФЕРТА.docx" download target="_blank" class="button__container">
                     <button class="button">
-                        <span>Перейти в бот</span>
+                        <span>Скачать публичную оферту</span>
+                        <svg class="download" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                            <path d="m7 10 5 5 5-5"></path>
+                            <path d="M12 15V3"></path>
+                        </svg>
                     </button>
                 </a>
             </div>
