update styles file and impoved adaptiv

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p class="text">Наш бот предоставляет услуги по умному поиску заказов и автоматически отправляет отклики за вас на Kwork и других биржах. Попробуйте 3 дня бесплатно!</p>
                     <a href="#" target="_blank" class="button__container">
                         <button class="button">
-                            <span>Начать автоматизировать отклики</span>
+                            <span>Начать <span class="pc__info">автоматизировать отклики</span></span>
                         </button>
                     </a>
                     <p class="label">Услуги — предоставление Пользователю доступа к функционалу чат-бота, включая автоматическое получение заказов, фильтрацию, отправку уведомлений и иные функции, указанные на сайте/в интерфейсе бота.</p>
@@ -213,7 +213,7 @@
                                     репортажные фотосессии.</p>
                             </div>
                             <a href="#" target="_blank" class="button__container">
-                                <button class="button"><span>Начать откликаться</span></button>
+                                <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
 
@@ -233,7 +233,7 @@
                                     маркетплейсах и Avito.</p>
                             </div>
                             <a href="#" target="_blank" class="button__container">
-                                <button class="button"><span>Начать откликаться</span></button>
+                                <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
 
@@ -253,7 +253,7 @@
                                     разовым консультациям.</p>
                             </div>
                             <a href="#" target="_blank" class="button__container">
-                                <button class="button"><span>Начать откликаться</span></button>
+                                <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
 
@@ -322,7 +322,7 @@
                 <div class="more__button">
                     <a href="#" target="_blank" class="button__container">
                         <button class="button">
-                            <span>Смотреть все 50+ направлений</span>
+                            <span>Смотреть все <span class="pc__info">50+ направлений</span></span>
                         </button>
                     </a>
                 </div>
@@ -333,7 +333,7 @@
         <!-- FEEDBACKS START -->
         <section class="section feedbacks__section">
             <div class="container">
-                <h2 class="feedbacks__title">Отзыва наших пользователей</h2>
+                <h2 class="feedbacks__title">Отзывы наших пользователей</h2>
                 <div class="feedbacks__cards__list">
 
                     <div class="feedbacks__cards__item">
@@ -422,7 +422,7 @@
                 <div class="more__button all__feedbacks">
                     <a href="#" target="_blank" class="button__container">
                         <button class="button">
-                            <span>Читать все истории успеха</span>
+                            <span>Читать все <span class="pc__info">истории успеха</span></span>
                         </button>
                     </a>
                 </div>
@@ -855,7 +855,7 @@
                 </div>
                 <a href="./ПУБЛИЧНАЯ ОФЕРТА.docx" download target="_blank" class="button__container">
                     <button class="button">
-                        <span>Скачать публичную оферту</span>
+                        <span>Скачать <span class="pc__info">публичную</span> оферту</span>
                         <svg class="download" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                             <path d="m7 10 5 5 5-5"></path>
