update styles file and impoved adaptiv 2

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <p class="ladno__desc">Telegram-чат-бот — программный продукт Исполнителя, размещённый в мессенджере Telegram, предназначенный для автоматического получения, обработки и выдачи заказов с платформы Kwork пользователям.</p>
                         <a href="#" target="_blank" class="button__container">
                             <button class="button">
-                                <span>Рассчитать мою окупаемость</span>
+                                <span>Рассчитать <span class="pc__info">мою окупаемость</span></span>
                             </button>
                         </a>
                     </div>
@@ -546,7 +546,7 @@
 
                     <!-- Кнопка "посмотреть все" -->
                     <a href="#" target="_blank" class="directions__item all__directions">
-                        <p class="direction__name">Посмотреть все категории</p>
+                        <p class="direction__name">Посмотреть все <span class="pc__info">категории</span></p>
                     </a>
 
                 </div>
