improved adaptive & cookies js & clickable links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script defer src="./scripts/feedbacks.js"></script>
     <script defer src="./scripts/questions.js"></script>
     <script defer src="./scripts/theme-button.js"></script>
+    <script src="./scripts/cookies.js" defer></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             <div class="logo">
                 Logo
             </div>
-            <a href="#" target="_blank" class="button__container header__button">
+            <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container header__button">
                 <button class="button">
                     <span>Перейти в бот</span>
                 </button>
@@ -42,7 +43,7 @@
                 <div class="info">
                     <h2 class="title"><span>Фриланс без рутины.</span> Откликайся на Kwork в 10 раз быстрее!</h2>
                     <p class="text">Наш бот предоставляет услуги по умному поиску заказов и автоматически отправляет отклики за вас на Kwork и других биржах. Попробуйте 3 дня бесплатно!</p>
-                    <a href="#" target="_blank" class="button__container">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
                         <button class="button">
                             <span>Начать <span class="pc__info">автоматизировать отклики</span></span>
                         </button>
@@ -124,9 +125,9 @@
                     <div class="ladno__right">
                         <h2 class="ladno__title_2">Что такое Telegram-чат-бот?</h2>
                         <p class="ladno__desc">Telegram-чат-бот — программный продукт Исполнителя, размещённый в мессенджере Telegram, предназначенный для автоматического получения, обработки и выдачи заказов с платформы Kwork пользователям.</p>
-                        <a href="#" target="_blank" class="button__container">
+                        <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
                             <button class="button">
-                                <span>Рассчитать <span class="pc__info">мою окупаемость</span></span>
+                                <span>Перейти</span>
                             </button>
                         </a>
                     </div>
@@ -212,7 +213,7 @@
                                 <p class="marketing__card__desc">Автоматический поиск заказов на предметные, рекламные и
                                     репортажные фотосессии.</p>
                             </div>
-                            <a href="#" target="_blank" class="button__container">
+                            <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
                                 <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
@@ -232,7 +233,7 @@
                                 <p class="marketing__card__desc">Мгновенный отклик на запросы по продвижению товаров на
                                     маркетплейсах и Avito.</p>
                             </div>
-                            <a href="#" target="_blank" class="button__container">
+                            <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
                                 <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
@@ -252,7 +253,7 @@
                                 <p class="marketing__card__desc">Автоматическое реагирование на запросы по аутсорсингу и
                                     разовым консультациям.</p>
                             </div>
-                            <a href="#" target="_blank" class="button__container">
+                            <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
                                 <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
@@ -271,8 +272,8 @@
                                 <p class="marketing__card__desc">Сверхбыстрые отклики на заказы по настройке
                                     Яндекс.Директ и Google Ads.</p>
                             </div>
-                            <a href="#" target="_blank" class="button__container">
-                                <button class="button"><span>Начать откликаться</span></button>
+                            <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
+                                <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
 
@@ -292,8 +293,8 @@
                                 <p class="marketing__card__desc">Ваше предложение всегда первое на разработку сайтов,
                                     лендингов и мобильных приложений.</p>
                             </div>
-                            <a href="#" target="_blank" class="button__container">
-                                <button class="button"><span>Начать откликаться</span></button>
+                            <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
+                                <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
 
@@ -311,8 +312,8 @@
                                 <p class="marketing__card__desc">Мгновенные отклики на заказы по продвижению в поисковых
                                     системах Яндекс и Google.</p>
                             </div>
-                            <a href="#" target="_blank" class="button__container">
-                                <button class="button"><span>Начать откликаться</span></button>
+                            <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
+                                <button class="button"><span>Начать <span class="pc__info">откликаться</span></span></button>
                             </a>
                         </div>
 
@@ -320,7 +321,7 @@
                 </div>
 
                 <div class="more__button">
-                    <a href="#" target="_blank" class="button__container">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
                         <button class="button">
                             <span>Смотреть все <span class="pc__info">50+ направлений</span></span>
                         </button>
@@ -420,7 +421,7 @@
 
                 </div>
                 <div class="more__button all__feedbacks">
-                    <a href="#" target="_blank" class="button__container">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
                         <button class="button">
                             <span>Читать все <span class="pc__info">истории успеха</span></span>
                         </button>
@@ -438,7 +439,7 @@
                 <div class="directions__list">
 
                     <!-- 1. Таргетированная реклама -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <circle cx="12" cy="12" r="9" />
@@ -448,7 +449,7 @@
                     </a>
 
                     <!-- 2. SMM / Продвижение -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M4 4h16v12H5l-1 4v-4z" />
@@ -459,7 +460,7 @@
                     </a>
 
                     <!-- 3. WebDev -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="3" y="5" width="18" height="14" rx="2" />
@@ -471,7 +472,7 @@
                     </a>
 
                     <!-- 4. SEO -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M3 17 8 12l4 4 9-9" />
@@ -481,7 +482,7 @@
                     </a>
 
                     <!-- 5. Графический и веб-дизайн -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="3" y="6" width="18" height="12" rx="2" />
@@ -492,7 +493,7 @@
                     </a>
 
                     <!-- 6. Недвижимость / Риелторство -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M3 11 12 4l9 7" />
@@ -502,7 +503,7 @@
                     </a>
 
                     <!-- 7. Контекстная реклама -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <circle cx="12" cy="12" r="9" />
@@ -512,7 +513,7 @@
                     </a>
 
                     <!-- 8. Логистика -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="2" y="7" width="13" height="10" rx="2" />
@@ -524,7 +525,7 @@
                     </a>
 
                     <!-- 9. Маркетплейсы -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="3" y="5" width="18" height="14" rx="2" />
@@ -535,7 +536,7 @@
                     </a>
 
                     <!-- 10. Репетиторы -->
-                    <a href="#" target="_blank" class="directions__item">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item">
                         <svg class="direction__icon" width="40" height="40" viewBox="0 0 24 24" fill="none"
                             stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M4 19v-8l8-4 8 4v8" />
@@ -545,7 +546,7 @@
                     </a>
 
                     <!-- Кнопка "посмотреть все" -->
-                    <a href="#" target="_blank" class="directions__item all__directions">
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="directions__item all__directions">
                         <p class="direction__name">Посмотреть все <span class="pc__info">категории</span></p>
                     </a>
 
@@ -855,7 +856,8 @@
                 </div>
                 <a href="./ПУБЛИЧНАЯ ОФЕРТА.docx" download target="_blank" class="button__container">
                     <button class="button">
-                        <span>Скачать <span class="pc__info">публичную</span> оферту</span>
+                        <span class="pc__info">Скачать публичную оферту</span>
+                        <span class="mobile__info">Публичная оферта</span>
                         <svg class="download" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                             <path d="m7 10 5 5 5-5"></path>
@@ -869,18 +871,8 @@
             <div class="container footer__container">
                 <div class="icons">
 
-                    <!-- VK -->
-                    <a href="#" class="icon">
-                        <svg width="36" height="36" fill="white" viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M21.503 18.381h-2.281c-.863 0-1.123-.699-2.67-2.247-1.352-1.303-1.923-1.465-2.265-1.465-.473 0-.602.13-.602.781v2.052c0 .555-.18.88-1.63.88a8.9 8.9 0 0 1-6.955-4.17 18.18 18.18 0 0 1-3.6-7.558c0-.342.13-.652.782-.652h2.28c.586 0 .797.261 1.027.864 1.107 3.258 2.996 6.092 3.763 6.092.294 0 .422-.13.422-.863V8.739c-.097-1.531-.91-1.66-.91-2.214a.563.563 0 0 1 .585-.523h3.584c.49 0 .652.244.652.83v4.53c0 .489.21.651.358.651.294 0 .52-.162 1.059-.7a18.76 18.76 0 0 0 2.802-4.66.982.982 0 0 1 .993-.65h2.281c.684 0 .829.342.684.83a28.466 28.466 0 0 1-3.062 5.262c-.246.375-.344.57 0 1.01.226.342 1.026 1.01 1.563 1.645.782.78 1.431 1.682 1.922 2.67.196.636-.131.961-.782.961Z">
-                            </path>
-                        </svg>
-                    </a>
-
                     <!-- Telegram -->
-                    <a href="#" class="icon">
+                    <a href="https://t.me/freelancer_gobot" class="icon">
                         <svg width="36" height="36" fill="white" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
