added empty privacy.html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bot</title>
+    <title>Главная</title>
     <link rel="stylesheet" href="./styles/style.css">
     <script defer src="./scripts/main.js"></script>
     <script defer src="./scripts/slider-service.js"></script>
